# SDL_School_Project

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Combat.cpp  Combat.hpp  Enemy.cpp  Enemy.h  Game.cpp  Game.hpp  GameObject.cpp  GameObject.h  Game_copy.cpp  Game_new.cpp  Map.hpp  Physics.cpp  Physics.hpp  README.md  RenderWindow.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.hpp  clean.bat  create_header.ps1  demo.cbp  demo.depend  demo.layout  entity.hpp  game.cpp  game.hpp  input.cpp  main.cpp  map.cpp  textureManager.cpp  textureManager.h  textureManeger.cpp  textureManeger.h
assets/: level1.map
src/: CMakeLists.txt  Game.cpp  game.h
